# tsdistances

./: Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml
matlab/: BUILD_SYSTEM_SUMMARY.md  DEPENDENCIES.md  INDEX.md  INSTALLATION_GUIDE.md  QUICK_REFERENCE.txt  QUICK_START.md  README.md  build_tsdistances.m  example_tsdistances.m  install_dependencies.bat  install_dependencies.sh  tsd_adtw.m  tsd_catch_euclidean.m  tsd_ddtw.m  tsd_dtw.m  tsd_erp.m  tsd_euclidean.m  tsd_lcss.m  tsd_mex.c  tsd_mex.mexmaca64  tsd_mp.m  tsd_msm.m  tsd_sbd.m  tsd_twe.m  tsd_wddtw.m  tsd_wdtw.m  tsdistances.h
python/tsdistances/: __init__.py
src/: core.rs  diagonal.rs  distances.rs  lib.rs  matlab_ffi.rs  matrix.rs  utils.rs
tests/: plot_journal.py  test_benchmark.py  test_correctness_cpu.py  test_correctness_gpu.py  test_edge_cases.py
