[package]
name = "tsdistances"
version = "0.1.9-dev"
description = "tsdistances is a Python library (with Rust backend) for computing various pairwise distances between sets of time series data."
edition = "2024"
authors = [
 "Alberto Azzari alberto.azzari@univr.it",
 "Andrea Cracco andrea.cracco@univr.it",
 "Francesco Masillo francesco.masillo@univr.it",
]

[dependencies]
catch22 = { git = "https://github.com/albertoazzari/catch22_rs.git", version = "0.1.0" }
ctrlc = { version = "3.4.7", optional = true }
parking_lot = "0.12.4"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
rand = "0.8.5"
rayon = "1.10.0"
rustfft = "6.3.0"
#tsdistances_gpu = { version = "0.1.0", path = "../tsdistances_gpu", default-features = false }
vulkano = "0.35.1"
tsdistances_gpu = { git = "https://github.com/albertoazzari/tsdistances_gpu.git", default-features = false }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "tsdistances"

[profile.release]
lto = true
opt-level = 3
codegen-units = 16
strip = true

[features]
default = ["python", "use-compiled-tools"]
python = ["pyo3", "ctrlc"]
use-compiled-tools = [
    "tsdistances_gpu/use-compiled-tools",
]
use-installed-tools = [
    "tsdistances_gpu/use-installed-tools",
]
matlab = []
